[gd_scene format=3 uid="uid://ulp6peon4ldn"]

[ext_resource type="Script" uid="uid://3tp1qx7unn0d" path="res://Graeme/Scripts/Baby/the_baby.gd" id="1_rd01h"]
[ext_resource type="Script" uid="uid://bvakx3jmco0p1" path="res://Graeme/Scripts/Baby/baby_head.gd" id="2_ej0j6"]
[ext_resource type="Script" uid="uid://dm0uu4h5t3gaa" path="res://Graeme/Scripts/Baby/baby_torso.gd" id="3_e2hms"]
[ext_resource type="Texture2D" uid="uid://b5772rcb0x81b" path="res://assets/sprites/baby/baby_head_jumpwalk_idle.png" id="3_odic7"]
[ext_resource type="Script" uid="uid://c7ulp0jtbv4cr" path="res://Graeme/Scripts/Baby/baby_main_arm.gd" id="5_jwkfu"]
[ext_resource type="Script" uid="uid://bcb7q27dghprp" path="res://Graeme/Scripts/Baby/baby_secondary_arm.gd" id="6_5en4v"]
[ext_resource type="Texture2D" uid="uid://dug4sty7vj12s" path="res://assets/sprites/baby/baby_push_jumpwalk_idle.png" id="7_2gqkr"]
[ext_resource type="Script" uid="uid://c7f6eodpxk0po" path="res://Graeme/Scripts/Baby/baby_legs.gd" id="7_euptn"]
[ext_resource type="Texture2D" uid="uid://bifs5f3f730g7" path="res://assets/sprites/baby/baby_firearm_jumpwalk_anim.png" id="9_gbud1"]
[ext_resource type="Texture2D" uid="uid://cj0ot0ylkgg7k" path="res://assets/sprites/fire - level 2 boss 1/fire_pivotable_arm.png" id="10_meqmw"]
[ext_resource type="Texture2D" uid="uid://81dnyn8u2edw" path="res://assets/sprites/baby/baby_icearm_jumpwalk_anim.png" id="11_3vl5m"]
[ext_resource type="Texture2D" uid="uid://db6uxynteehrj" path="res://assets/sprites/baby/baby_torso_jump_anim.png" id="11_eygqt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_th1fm"]
atlas = ExtResource("3_odic7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yyjfj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th1fm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tqr1o"]
atlas = ExtResource("11_eygqt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6hnl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqr1o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_68wqw"]
atlas = ExtResource("7_2gqkr")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b15dd"]
atlas = ExtResource("7_2gqkr")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk24q"]
atlas = ExtResource("7_2gqkr")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps5c4"]
atlas = ExtResource("7_2gqkr")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow6el"]
atlas = ExtResource("7_2gqkr")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8p52"]
atlas = ExtResource("7_2gqkr")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t52lr"]
atlas = ExtResource("7_2gqkr")
region = Rect2(80, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1fl5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68wqw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b15dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk24q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps5c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow6el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8p52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t52lr")
}],
"loop": false,
"name": &"mainArmPunch",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_44wfk"]
atlas = ExtResource("9_gbud1")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7puy"]
atlas = ExtResource("10_meqmw")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jixi"]
atlas = ExtResource("11_3vl5m")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttput"]
atlas = ExtResource("9_gbud1")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbtcg"]
atlas = ExtResource("9_gbud1")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj4nl"]
atlas = ExtResource("9_gbud1")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0wsh"]
atlas = ExtResource("9_gbud1")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdocd"]
atlas = ExtResource("9_gbud1")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2560d"]
atlas = ExtResource("9_gbud1")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s30ma"]
atlas = ExtResource("9_gbud1")
region = Rect2(0, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_626s4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44wfk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7puy")
}],
"loop": true,
"name": &"defaultFire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jixi")
}],
"loop": true,
"name": &"defaultIce",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttput")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbtcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj4nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0wsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdocd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2560d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s30ma")
}],
"loop": false,
"name": &"secondaryArmPunch",
"speed": 20.0
}, {
"frames": [],
"loop": true,
"name": &"secondaryFirePunch",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"secondaryIcePunch",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ri3u5"]
atlas = ExtResource("11_eygqt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_505ly"]
atlas = ExtResource("11_eygqt")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o81sr"]
atlas = ExtResource("11_eygqt")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y151u"]
atlas = ExtResource("11_eygqt")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4tve"]
atlas = ExtResource("11_eygqt")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyxl6"]
atlas = ExtResource("11_eygqt")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3og51"]
atlas = ExtResource("11_eygqt")
region = Rect2(0, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_qa4qn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri3u5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_505ly")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o81sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y151u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4tve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyxl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3og51")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_paxpy"]
radius = 16.0
height = 66.0

[node name="TheBaby" type="CharacterBody2D" unique_id=890405196]
script = ExtResource("1_rd01h")

[node name="Head" type="Node2D" parent="." unique_id=914080792]
position = Vector2(8, -5)
script = ExtResource("2_ej0j6")

[node name="HeadAnimatedSprite2D" type="AnimatedSprite2D" parent="Head" unique_id=90809329]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_yyjfj")
flip_h = true

[node name="Torso" type="Node2D" parent="." unique_id=1368348547]
visible = false
script = ExtResource("3_e2hms")

[node name="TorsoAnimatedSprite2D" type="AnimatedSprite2D" parent="Torso" unique_id=1143764291]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_s6hnl")

[node name="MainArm" type="Node2D" parent="." unique_id=1830604900]
z_index = 1
position = Vector2(-4, 6)
script = ExtResource("5_jwkfu")

[node name="MainArmAnimatedSprite2D" type="AnimatedSprite2D" parent="MainArm" unique_id=1871714940]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_h1fl5")
animation = &"mainArmPunch"
frame = 5
frame_progress = 1.0
flip_h = true

[node name="AttackSpawnPoint" type="Node2D" parent="MainArm" unique_id=430998346]
position = Vector2(-34, -6)

[node name="AttackCoolDownTimer" type="Timer" parent="MainArm" unique_id=837544158]

[node name="SecondaryArm" type="Node2D" parent="." unique_id=1006066429]
position = Vector2(3, 3)
script = ExtResource("6_5en4v")

[node name="SecondaryArmAnimatedSprite2D" type="AnimatedSprite2D" parent="SecondaryArm" unique_id=633636791]
texture_filter = 1
position = Vector2(5, 2)
sprite_frames = SubResource("SpriteFrames_626s4")
animation = &"secondaryFirePunch"
flip_h = true

[node name="AttackCoolDownTimer" type="Timer" parent="SecondaryArm" unique_id=500986740]
wait_time = 0.1

[node name="AttackSpawnPoint" type="Node2D" parent="SecondaryArm" unique_id=1110991326]
position = Vector2(-22, -13)

[node name="Legs" type="Node2D" parent="." unique_id=662987875]
position = Vector2(8, -4)
script = ExtResource("7_euptn")

[node name="LegsAnimatedSprite2D" type="AnimatedSprite2D" parent="Legs" unique_id=1672588527]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qa4qn")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1967680683]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_paxpy")

[connection signal="timeout" from="MainArm/AttackCoolDownTimer" to="MainArm" method="_on_attack_cool_down_timer_timeout"]
[connection signal="timeout" from="SecondaryArm/AttackCoolDownTimer" to="SecondaryArm" method="_on_attack_cool_down_timer_timeout"]
